--- a/product.html
+++ b/product.html
@@ -116,7 +116,7 @@
                     <div class="card align-items-center p-3 mt-4">
                         <div class="card-body">
                             <h5 class="text-center">Full Gold Ribbon</h5>
-                            <img class="img-fluid mb-4" src="./img/Full Gold Ribbon.jpg" alt="">
+                            <img class="img-fluid mb-4" src="./img/Full gold ribbon.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -132,7 +132,7 @@
                     <div class="card align-items-center p-3 mt-4">
                         <div class="card-body">
                             <h5 class="text-center">Albino Koi</h5>
-                            <img class="img-fluid mb-4" src="./img/albino coi.jpeg" alt="">
+                            <img class="img-fluid mb-4" src="./img/albino coi.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -147,7 +147,7 @@
                 <div class="col-md-4">
                     <div class="card align-items-center p-3 mt-4">
                         <div class="card-body">
-                            <h5 class="text-center">Red Lace</h5>
+                            <h5 class="text-center">red lace</h5>
                             <img class="img-fluid mb-4" src="./img/Red Lace.jpg" alt="">
                         </div>
                     </div>
@@ -164,7 +164,7 @@
                     <div class="card align-items-center p-3 mt-4">
                         <div class="card-body">
                             <h5 class="text-center">Japan blue tail ribbon</h5>
-                            <img class="img-fluid mb-4" src="./img/Japan blue tail ribbon.jpg" alt="">
+                            <img class="img-fluid mb-4" src="./img/japan blue tail ribbon.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -220,7 +220,7 @@
                     <div class="card align-items-center p-3 mt-4">
                         <div class="card-body">
                             <h5 class="text-center">imperial blue draggon ribbon</h5>
-                            <img class="img-fluid mb-4" src="./img/imperial blue draggon ribbon.jpeg" alt="">
+                            <img class="img-fluid mb-4" src="./img/imperial blue draggon ribbon.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -236,7 +236,7 @@
                     <div class="card align-items-center p-3 mt-4">
                         <div class="card-body">
                             <h5 class="text-center">red texido swalo</h5>
-                            <img class="img-fluid mb-4" src="./img/red texido swalo.jpeg" alt="">
+                            <img class="img-fluid mb-4" src="./img/red texido swalo.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -244,7 +244,7 @@
                     <div class="card align-items-center p-3 mt-4">
                         <div class="card-body">
                             <h5 class="text-center">texido white ribbon</h5>
-                            <img class="img-fluid mb-4" src="./img/texido white ribbon.png" alt="">
+                            <img class="img-fluid mb-4" src="./img/texido white ribbon.jpg" alt="">
                         </div>
                     </div>
                 </div>
