--- a/product.html
+++ b/product.html
@@ -116,7 +116,7 @@
                     <div class="card align-items-center p-3 mt-4">
                         <div class="card-body">
                             <h5 class="text-center">Full Gold Ribbon</h5>
-                            <img class="img-fluid mb-4" src="./img/Full gold ribbon.jpg" alt="">
+                            <img class="img-fluid mb-4" src="./img/full gold ribbon.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                     <div class="card align-items-center p-3 mt-4">
                         <div class="card-body">
                             <h5 class="text-center">red lace</h5>
-                            <img class="img-fluid mb-4" src="./img/Red Lace.jpg" alt="">
+                            <img class="img-fluid mb-4" src="./img/red lace.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -196,7 +196,7 @@
                     <div class="card align-items-center p-3 mt-4">
                         <div class="card-body">
                             <h5 class="text-center">Japan blue tail</h5>
-                            <img class="img-fluid mb-4" src="./img/Japan blue tail.jpg" alt="">
+                            <img class="img-fluid mb-4" src="./img/japan blue tail.jpg" alt="">
                         </div>
                     </div>
                 </div>
